# peers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  spec.md
crates/peers-typescript/: Cargo.toml  build.rs
crates/peers-typescript/src/: lib.rs
frontend/: .cta.json  .oxfmtrc.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/ui/: alert-dialog.tsx  checkbox.tsx  collapsible.tsx  tooltip.tsx
frontend/src/features/comments/: CommentComposer.tsx  CommentPanel.tsx  InlineCommentThread.tsx
frontend/src/features/diff/: DiffHeader.tsx  DiffViewer.tsx  FileLineView.tsx  FullFileView.tsx  GitDiffView.tsx  SideBySideDiff.tsx
frontend/src/features/review/: FileSidebar.tsx  FullFileRouteView.tsx  QuickAccess.tsx  ReviewShell.tsx  ReviewToolbar.tsx  ReviewWorkspace.tsx  fileLinks.ts  peersReviewClient.gen.ts  quickAccessSearch.ts  reviewData.ts  reviewSearch.ts
frontend/src/routes/: __root.tsx  file.tsx  index.tsx
lua/peers/: buffer.lua  init.lua  lsp.lua  lsp_proxy.lua  onboarding.lua  session.lua  sidebar.lua  source_decorations.lua  timing.lua
plugin/: peers.lua
src/: agent.rs  anchors.rs  cli.rs  comments.rs  diff.rs  lib.rs  logging.rs  main.rs  nvim.rs  nvim_rpc.rs  realtime.rs  review.rs  review_provider.rs  rpc.rs  server.rs  ui_assets.rs
src/agent/: codex.rs
