[package]
name = "committeer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
facet = "0.46.5"
facet-json = "0.46.1"
gix = "0.84.0"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
