[package]
name = "peers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
facet = "0.46.5"
facet-json = "0.46.1"
futures = "0.3.32"
gix = "0.84.0"
gix-diff = "0.64.0"
ignore = "0.4.25"
notify = "8.2.0"
time = { version = "0.3.47", features = ["formatting", "macros"] }
thiserror = "2.0"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29.0"
tower-lsp-server = "0.23.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
vox = { version = "0.8.2", features = ["transport-websocket"] }
humantime = "2.3.0"
